<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.fragments.home.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/Linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/welcome"
                    android:textColor="@color/accent"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_would_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/Linear_header"
                app:layout_constraintTop_toBottomOf="@+id/Linear_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_would_like_to_eat">

                <ImageView
                    android:id="@+id/iv_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/over_popular_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_would_like_to_eat"
                app:layout_constraintTop_toBottomOf="@+id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/over_popular_items" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/rv_meals_popular"
                app:layout_constraintTop_toBottomOf="@+id/rv_meals_popular" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>